# BMRC

./: .gitignore  Cargo.toml  README.md
src/: bwt.rs  error.rs  format.rs  levels.rs  lib.rs  parallel.rs  predictor.rs  range_coder.rs
tests/: roundtrip.rs  sample.txt
